# cardid

./: CMakeLists.txt  README.md  cardid.sln  cardid.vcxproj  cardid.vcxproj.filters  jcardid.vcxproj  jcardid.vcxproj.filters  opencv2411.props  readme.txt  test.cpp  test.vcxproj  test.vcxproj.filters
include/: Candidate.h  DealCorrect.h  GetCandidate.h  LinkCandidate.h  LinkCandidateUtil.h  headline.h  mser.h  swt.h  swtUtil.h  tojava.h
src/: DealCorrect.cpp  GetCandidate.cpp  LinkCandidate.cpp  LinkCandidateUtil.cpp  mser.cpp  swt.cpp  swtUtil.cpp  tojava.cpp
test/: test.cpp
